--- a/Parlayan Düğme Vurgu Efektleri/style.css
+++ b/Parlayan Düğme Vurgu Efektleri/style.css
@@ -64,7 +64,7 @@ a i:after {
     content: "";
     position: absolute;
     bottom: 0;
-    right: 20%;
+    left: 20%;
     width: 10px;
     height: 4px;
     background: #27282C;
